// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text > should render as { onBrand: true } 1`] = `
<div>
  <p
    class="lds--text lds--text--regular lds--text--md lds--text--onbrand"
  >
    example text
  </p>
</div>
`;

exports[`Text > should render as { primary: true } 1`] = `
<div>
  <p
    class="lds--text lds--text--regular lds--text--md lds--text--primary"
  >
    example text
  </p>
</div>
`;

exports[`Text > should render as { secondary: true } 1`] = `
<div>
  <p
    class="lds--text lds--text--regular lds--text--md lds--text--secondary"
  >
    example text
  </p>
</div>
`;

exports[`Text > should render as { tertiary: true } 1`] = `
<div>
  <p
    class="lds--text lds--text--regular lds--text--md lds--text--tertiary"
  >
    example text
  </p>
</div>
`;

exports[`Text > should render element as h1 1`] = `
<div>
  <h1
    class="lds--text lds--text--regular lds--text--md lds--text--default"
  >
    example text
  </h1>
</div>
`;

exports[`Text > should render element as h2 1`] = `
<div>
  <h2
    class="lds--text lds--text--regular lds--text--md lds--text--default"
  >
    example text
  </h2>
</div>
`;

exports[`Text > should render element as h3 1`] = `
<div>
  <h3
    class="lds--text lds--text--regular lds--text--md lds--text--default"
  >
    example text
  </h3>
</div>
`;

exports[`Text > should render element as h4 1`] = `
<div>
  <h4
    class="lds--text lds--text--regular lds--text--md lds--text--default"
  >
    example text
  </h4>
</div>
`;

exports[`Text > should render element as h5 1`] = `
<div>
  <h5
    class="lds--text lds--text--regular lds--text--md lds--text--default"
  >
    example text
  </h5>
</div>
`;

exports[`Text > should render element as h5 2`] = `
<div>
  <h5
    class="lds--text lds--text--regular lds--text--md lds--text--default"
  >
    example text
  </h5>
</div>
`;

exports[`Text > should render element as label with htmlFor 1`] = `
<div>
  <label
    class="lds--text lds--text--regular lds--text--md lds--text--default"
    for="test-id"
  >
    example text
  </label>
</div>
`;

exports[`Text > should render element as label without htmlFor 1`] = `
<div>
  <label
    class="lds--text lds--text--regular lds--text--md lds--text--default"
  >
    example text
  </label>
</div>
`;

exports[`Text > should render element as p 1`] = `
<div>
  <p
    class="lds--text lds--text--regular lds--text--md lds--text--default"
  >
    example text
  </p>
</div>
`;

exports[`Text > should render element as span 1`] = `
<div>
  <span
    class="lds--text lds--text--regular lds--text--md lds--text--default"
  >
    example text
  </span>
</div>
`;

exports[`Text > should render element on center 1`] = `
<div>
  <p
    class="lds--text lds--text--regular lds--text--md lds--text--default lds--text--center"
  >
    example text
  </p>
</div>
`;

exports[`Text > should render with default props 1`] = `
<div>
  <p
    class="lds--text lds--text--regular lds--text--md lds--text--default"
  >
    example text
  </p>
</div>
`;

exports[`Text > should render with size hero 1`] = `
<div>
  <p
    class="lds--text lds--text--regular lds--text--hero lds--text--default"
  >
    example text
  </p>
</div>
`;

exports[`Text > should render with size l 1`] = `
<div>
  <p
    class="lds--text lds--text--regular lds--text--l lds--text--default"
  >
    example text
  </p>
</div>
`;

exports[`Text > should render with size m 1`] = `
<div>
  <p
    class="lds--text lds--text--regular lds--text--m lds--text--default"
  >
    example text
  </p>
</div>
`;

exports[`Text > should render with size s 1`] = `
<div>
  <p
    class="lds--text lds--text--regular lds--text--s lds--text--default"
  >
    example text
  </p>
</div>
`;

exports[`Text > should render with size xl 1`] = `
<div>
  <p
    class="lds--text lds--text--regular lds--text--xl lds--text--default"
  >
    example text
  </p>
</div>
`;

exports[`Text > should render with size xs 1`] = `
<div>
  <p
    class="lds--text lds--text--regular lds--text--xs lds--text--default"
  >
    example text
  </p>
</div>
`;
